une petite modification

--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -24,7 +24,7 @@
                 <a href="{{ path('classementclub') }}">Equipes</a>
             </div>
         </li>
-        <li class="menu"> <a href="historique"> HISTORIQUE </a></li>
+        <li class="menu"> <a href="{{ path('historique_index') }}"> HISTORIQUE </a></li>
     </ul>
 
 </header>
