--- a/templates/home.html.twig
+++ b/templates/home.html.twig
@@ -19,7 +19,7 @@ Nextipster
         {% for j in jeu %}
         <ul class="ulMatch">
             <li class="headerMatch"> Champions League </li>
-            <li class="match"><a href= "{{ path('Analyse',{id:j.id}) }}"> <span class="time">{{ j.heure|date('H:i:s') }} </span> <span class="team">{{ j.getIdEquipe1().NomEquipe }} -- {{ j.getIdEquipe2().NomEquipe }} </span>  <span class="nbAvis"> 5 Avis </span> </a></li>
+            <li class="match"><a href= "{{ path('Analyse',{'id':j.id,'Equipe1':j.idEquipe1.id, 'Equipe2':j.idEquipe2.id}) }}"> <span class="time">{{ j.heure|date('H:i:s') }} </span> <span class="team">{{ j.getIdEquipe1().NomEquipe }} -- {{ j.getIdEquipe2().NomEquipe }} </span>  <span class="nbAvis"> 5 Avis </span> </a></li>
 
         </ul>
     {% endfor %}
