--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -1,4 +1,5 @@
-<!Dctml>
+<!DOCTYPE html>
+<html>
 <head>
     <meta charset="UTF-8">
     <title>{% block title %}Welcome!{% endblock %}</title>
@@ -12,7 +13,8 @@
 
 <header>
     <div id="banner">
-        <img src="banner.jpg" alt="banniere">
+        <img src="images/banner.jpg" alt="banniere" width="100%" height="250px">
+        <p style="position: absolute; top:-59px; left: 100px; color: #263238; font-size: 50px; font-family: Helvetica; font-weight: 900;">Pronostiquez pour vos meilleurs équipes</p>
     </div>
 
     <ul class="ulMenu">
