--- a/templates/base2.html.twig
+++ b/templates/base2.html.twig
@@ -12,7 +12,7 @@
 
 <header>
     <div id="banner">
-        <img src="banner.jpg" alt="banniere">
+        <img src="../public/images/banner.jpg" alt="banniere">
     </div>
 
     <ul class="ulMenu">
