--- a/templates/Home/home.html.twig
+++ b/templates/Home/home.html.twig
@@ -5,6 +5,8 @@ Nextipster
 {% endblock %}
 
 {%  block stylesheets %}
+    <link rel="stylesheet" type="text/css" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.1/css/bootstrap.min.css">
+    <link href='https://fonts.googleapis.com/css?family=Lato' rel='stylesheet' type='text/css'>
     <link rel="stylesheet" type="text/css" href="{{ asset('CSS/home.css') }}">
 {% endblock %}
 
@@ -23,7 +25,7 @@ Nextipster
         <img src="" alt="slides">
     </div>
 
-        <h2> Matchs de la semaine </h2>
+      <!--  <h2> Matchs de la semaine </h2>
         <hr class="separator"> <br />
 
         <ul class="ulMatch">
@@ -37,7 +39,7 @@ Nextipster
             <li class="match"><a> <span class="time">18:55</span> <span class="team">Paris - Réal</span>  <span class="nbAvis"> 5 Avis </span> </a></li>
             <li class="match"><a>  <span class="time">14:00</span>  <span class="team"> Barça - Juventus </span>  </a> </li>
         </ul>
-
+-->
 
 
 {% endblock %}
