--- a/public/CSS/home.css
+++ b/public/CSS/home.css
@@ -1,10 +1,14 @@
+
+html,body{
+    margin: auto;
+    height: 100%;
+}
 #slides{
     height:20%;
     max-width:100%;
     border-bottom:solid 1px;
-
-
 }
+
 
 h2{
     text-align: center;
