--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -52,9 +52,11 @@
 
 </div>
 
-<div class="body">
-    {% block body %}{% endblock %}
-</div>
+
+    {% block body %}
+<div class="body"> </div>
+    {% endblock %}
+
 <!--
 <footer>
     <p>NextTipster</p>
