--- a/templates/Home/home.html.twig
+++ b/templates/Home/home.html.twig
@@ -5,8 +5,6 @@ Nextipster
 {% endblock %}
 
 {%  block stylesheets %}
-    <link rel="stylesheet" type="text/css" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.1/css/bootstrap.min.css">
-    <link href='https://fonts.googleapis.com/css?family=Lato' rel='stylesheet' type='text/css'>
     <link rel="stylesheet" type="text/css" href="{{ asset('CSS/home.css') }}">
 {% endblock %}
 
@@ -20,10 +18,27 @@ Nextipster
 
 {%  block body %}
 
+    <!-- Slideshow container -->
+    <div class="slideshow-container">
 
-    <div id="slides">
-        <img src="" alt="slides">
+        <!-- Full-width images with number and caption text -->
+        <div class="mySlides fade">
+            <img src="images/30d4b.jpg" style="width:70%; height: 200px; margin-left: 40px; margin-top: 10px;">
+            <div class="text"> <a href="#"> ENTRE LYON ET SON PUBLIC, UNE FRACTURE OUVERTE</a></div>
+        </div>
+
+        <div class="mySlides fade">
+            <img src="images/b58a6.jpg" style="width:70%; height: 200px; margin-left: 40px; margin-top: 10px;">
+            <div class="text"><a href="#"> LES VERRES ARRACHENT UN POINT </a></div>
+        </div>
+
+        <div class="mySlides fade">
+            <img src="images/fc834.jpg" style="width:70%; height: 200px; margin-left: 40px; margin-top: 10px;">
+            <div class="text"><a href="#" class="text"> MERCADAL : " TOUJOURS EN VIE "</a>a</div>
+        </div>
+
     </div>
+
 
       <!--  <h2> Matchs de la semaine </h2>
         <hr class="separator"> <br />
@@ -41,6 +56,23 @@ Nextipster
         </ul>
 -->
 
+    <script>
+        var slideIndex = 0;
+        showSlides();
 
-{% endblock %}
+        function showSlides() {
+            var i;
+            var slides = document.getElementsByClassName("mySlides");
+            for (i = 0; i < slides.length; i++) {
+                slides[i].style.display = "none";
+            }
+            slideIndex++;
+            if (slideIndex > slides.length) {slideIndex = 1}
+            slides[slideIndex-1].style.display = "block";
+            setTimeout(showSlides, 2000); // Change image every 2 seconds
+        }
+    </script>
+
+
+{% endblock body %}
 
