--- a/public/CSS/left.css
+++ b/public/CSS/left.css
@@ -10,7 +10,7 @@
 }
 #topUser{
     font-size: 40px;
-    color: #37474F
+    color: #37474F;
 }
 #user{
     background-color: #FDD835; padding: 10px;
