--- a/public/CSS/footer.css
+++ b/public/CSS/footer.css
@@ -1,12 +1,19 @@
 footer{
-    height:100px;
-    position:relative;
+  /*  height:100px;
+    position:absolute;
     bottom:0;
     left:0;
     right:0;
     padding:0;
     background-color:gray;
-    text-align:center;
+    text-align:center;*/
+    background-color:#37474F;
+    position: absolute;
+    right: 0;
+    top:200%;
+    left: 0;
+    padding: 1rem;
+    text-align: center;
 }
 
 
