--- a/public/CSS/home.css
+++ b/public/CSS/home.css
@@ -20,17 +20,15 @@ h2{
 .separator{
     height:0.1px;
     color:lightgray;
-    width:80%;
+    width:50%;
 }
 
 .ulMatch{
-    width:65%;
+    width:60%;
     background-color:#f1f1f1;
-    margin-left:120px;
     list-style-type: none;
-    padding: 0;
+    padding-right: 12px;
     overflow: hidden;
-    margin-left:200px;
     margin-bottom:70px;
 }
 .match{
@@ -78,7 +76,7 @@ h2{
     border: solid 1px gray;
     border-top-left-radius : 5px;
     border-top-right-radius : 5px;
-    background-color:blue;
+    background-color:#37474F;
     height:30px;
     color:white;
     text-align: center;
@@ -90,19 +88,16 @@ h2{
 
 
 
-/* Slideshow container */
 .slideshow-container {
     width: 80%;
     position: relative;
     margin: auto;
 }
 
-/* Hide the images by default */
 .mySlides {
     display: none;
 }
 
-/* Next & previous buttons */
 .prev, .next {
     cursor: pointer;
     position: absolute;
@@ -118,18 +113,15 @@ h2{
     user-select: none;
 }
 
-/* Position the "next button" to the right */
 .next {
     right: 0;
     border-radius: 3px 0 0 3px;
 }
 
-/* On hover, add a black background color with a little bit see-through */
 .prev:hover, .next:hover {
     background-color: rgba(0,0,0,0.8);
 }
 
-/* Caption text */
 .text {
     font-size: 20px;
     font-weight: 900;
@@ -144,8 +136,6 @@ h2{
 }
 
 
-
-/* The dots/bullets/indicators */
 .dot {
     cursor: pointer;
     height: 15px;
@@ -161,7 +151,6 @@ h2{
     background-color: #717171;
 }
 
-/* Fading animation */
 .fade {
     -webkit-animation-name: fade;
     -webkit-animation-duration: 1.5s;
