--- a/templates/base2.html.twig
+++ b/templates/base2.html.twig
@@ -1,10 +1,12 @@
-<!Dctml>
+<!DOCTYPE html>
+<html>
 <head>
     <meta charset="UTF-8">
     <title>{% block title %}Welcome!{% endblock %}</title>
     <link rel="stylesheet" type="text/css" href="{{ asset('CSS/header.css') }}">
     <link rel="stylesheet" type="text/css" href="{{ asset('CSS/left.css') }}">
     <link rel="stylesheet" type="text/css" href="{{ asset('CSS/footer.css') }}">
+    <link rel="stylesheet" type="text/css" href="{{ asset('CSS/home.css') }}">
     {% block stylesheets %}{% endblock %}
 </head>
 
@@ -12,7 +14,8 @@
 
 <header>
     <div id="banner">
-        <img src="../public/images/banner.jpg" alt="banniere">
+        <img src="images/banner.jpg" alt="banniere" width="100%" height="250px">
+        <p id="baniere">Pronostiquez pour vos meilleurs équipes</p>
     </div>
 
     <ul class="ulMenu">
@@ -24,8 +27,8 @@
                 <a href="{{ path('classementclub') }}">Equipes</a>
             </div>
         </li>
-        <li class="menu"> <a href="historique"> HISTORIQUE </a></li>
-        <li class="menu"> <a href="profil"> PROFIL </a></li>
+        <li class="menu"> <a href="{{ path('historique_index') }}"> HISTORIQUE </a></li>
+        <li class="menu"> <a href="profil"> MON PROFIL </a></li>
     </ul>
 
 </header>
@@ -60,7 +63,6 @@
     <a href="{{ path('contacte') }}">Nous contacter</a>
     <a href="{{ path('plan') }}">Plan du site</a>
     <a href="{{ path('mention') }}">Mentions légales</a>
-
 </footer>
 
 
